--- a/app/views/investigations/pages/pre/_chosahokokusyo.html.erb
+++ b/app/views/investigations/pages/pre/_chosahokokusyo.html.erb
@@ -1,13 +1,5 @@
-<% if survey_type == "pre" %>
-  <% survey_name = "事前" %>
-<% elsif survey_type == "ongoing" %>
-  <% survey_name = "事中" %>
-<% elsif survey_type == "after" %>
-  <% survey_name = "事後" %>
-<% end %>
-
 <div class="page">
-  <h1 class="text-center"><%= survey_name %>調査報告書</h1>
+  <h1 class="text-center">事前調査報告書</h1>
   <br/>
   <br/>
   <div class="pdfpage_wrapper">
