--- a/app/views/investigations/pdf_pre_survey.html.erb
+++ b/app/views/investigations/pdf_pre_survey.html.erb
@@ -1,18 +1,18 @@
 <div class="book">
-  <%= render 'investigations/pages/pre/hyoshi', survey_type: "pre" %>
-  <%= render 'investigations/pages/pre/chosahokokusyo', survey_type: "pre" %>
+  <%= render 'investigations/pages/pre/hyoshi' %>
+  <%= render 'investigations/pages/pre/chosahokokusyo' %>
   <!-- コメントアウト -->
   <% if false %>  
-    <%= render 'investigations/pages/pre/chosakuikiitizu', survey_type: "pre" %>
-    <%= render 'investigations/pages/pre/chosakuikiheimenzu1', survey_type: "pre" %>
-    <%= render 'investigations/pages/pre/chosakuikiheimenzu2', survey_type: "pre" %>
+    <%= render 'investigations/pages/pre/chosakuikiitizu' %>
+    <%= render 'investigations/pages/pre/chosakuikiheimenzu1' %>
+    <%= render 'investigations/pages/pre/chosakuikiheimenzu2' %>
   <% end %>
   <!-- コメントアウト -->
-  <%= render 'investigations/pages/pre/tatemonochosaichiranhyo', survey_type: "pre" %>
-  <%= render 'investigations/pages/pre/kaokuchosasyodakusyo', survey_type: "pre" %>
-  <%= render 'investigations/pages/pre/tatemonosuijyunsokuryokekkahyo', survey_type: "pre" %>
-  <%= render 'investigations/pages/pre/tatemonokeisyasokuteikekkahyo', survey_type: "pre" %>
-  <%= render 'investigations/pages/pre/sonsyochosasyo', survey_type: "pre" %>
+  <%= render 'investigations/pages/pre/tatemonochosaichiranhyo' %>
+  <%= render 'investigations/pages/pre/kaokuchosasyodakusyo' %>
+  <%= render 'investigations/pages/pre/tatemonosuijyunsokuryokekkahyo' %>
+  <%= render 'investigations/pages/pre/tatemonokeisyasokuteikekkahyo' %>
+  <%= render 'investigations/pages/pre/sonsyochosasyo' %>
 </div>
 
 <style>
@@ -29,7 +29,7 @@ body {
 .page {
     width: 21cm;
     min-height: 29.7cm;
-    padding: 1cm;
+    padding: 1cm 0.2cm 1cm 1.8cm;  /*上　右　下　左*/
     margin: 1cm auto;
     border: 1px #D3D3D3 solid;
     border-radius: 5px;
