--- a/app/views/houses/kyojyusya_syodakusyo_new_ongoing_survey.html.erb
+++ b/app/views/houses/kyojyusya_syodakusyo_new_ongoing_survey.html.erb
@@ -20,13 +20,13 @@
     <td colspan="3"><%= @house.city %><%= @house.block %></td>
   </tr>
   <tr>
-    <td>現住居者氏名</td>
+    <td>現住居者氏名（承諾者）</td>
     <td><%= @house.house_name %></td>
     <td>TEL</td>
     <td></td>
   </tr>
   <tr>
-    <td>所有者氏名（承諾者）</td>
+    <td>所有者氏名</td>
     <td><%= @house.owner_name %></td>
     <td>TEL</td>
     <td></td>
@@ -65,11 +65,6 @@
     <td><%= @house.area %></td>
   </tr>      
 </table>
-
-<!-- サイン -->
-<div style="text-align: center; margin-bottom:30px;">
-  <%= image_tag @house.sign_ongoing_survey %>
-</div>
 
 <!-- サイン -->
 <%= form_for(@house) do |f| %>
