--- a/app/views/houses/kyojyusya_syodakusyo_show_ongoing_survey.html.erb
+++ b/app/views/houses/kyojyusya_syodakusyo_show_ongoing_survey.html.erb
@@ -20,13 +20,13 @@
     <td colspan="3"><%= @house.city %><%= @house.block %></td>
   </tr>
   <tr>
-    <td>現住居者氏名</td>
+    <td>現住居者氏名（承諾者）</td>
     <td><%= @house.house_name %></td>
     <td>TEL</td>
     <td></td>
   </tr>
   <tr>
-    <td>所有者氏名（承諾者）</td>
+    <td>所有者氏名</td>
     <td><%= @house.owner_name %></td>
     <td>TEL</td>
     <td></td>
