--- a/app/views/houses/syodakusyo_new_after_survey.html.erb
+++ b/app/views/houses/syodakusyo_new_after_survey.html.erb
@@ -6,7 +6,7 @@
 </ol>
 
 <p class="text-right">[事後調査用]</p>
-<p class="text-right">家屋番号：<%= @house.id %></p>
+<p class="text-right">家屋番号：<%= @house.house_number %></p>
 <h1 class="text-center">家屋調査承諾書（及び不要承諾書）</h1>
 <p>工事名：<%= @investigation.construction_name %></p>
 <table class="table table-bordered" style="font-size:10px;">
@@ -20,13 +20,13 @@
     <td colspan="3"><%= @house.city %><%= @house.block %></td>
   </tr>
   <tr>
-    <td>現住居者氏名（承諾者）</td>
-    <td></td>
+    <td>現住居者氏名</td>
+    <td><%= @house.house_name %></td>
     <td>TEL</td>
     <td></td>
   </tr>
   <tr>
-    <td>所有者氏名</td>
+    <td>所有者氏名（承諾者）</td>
     <td><%= @house.owner_name %></td>
     <td>TEL</td>
     <td></td>
