--- a/app/views/investigations/pages/pre/_kaokuchosasyodakusyo.html.erb
+++ b/app/views/investigations/pages/pre/_kaokuchosasyodakusyo.html.erb
@@ -1,14 +1,6 @@
-<% if survey_type == "pre" %>
-  <% survey_name = "事前" %>
-<% elsif survey_type == "ongoing" %>
-  <% survey_name = "事中" %>
-<% elsif survey_type == "after" %>
-  <% survey_name = "事後" %>
-<% end %>
-
 <% @houses.each do |house| %>
   <div class="page">
-    <p class="text-right">[<%= survey_name %>調査用]</p>
+    <p class="text-right">[事前調査用]</p>
     <p class="text-right">家屋番号：<%= house.id %></p>
     <h1 class="text-center">家屋調査承諾書（及び不要承諾書）</h1>
     <p>工事名：<%= @investigation.construction_name %></p>
