--- a/app/views/investigations/pages/pre/_tatemonosuijyunsokuryokekkahyo.html.erb
+++ b/app/views/investigations/pages/pre/_tatemonosuijyunsokuryokekkahyo.html.erb
@@ -14,7 +14,7 @@
       </tr>
       <% points = house.points %>
       <% points.each do |point| %>
-        <% pre_post = point.posts.find_by(survey_type: survey_type) %>
+        <% pre_post = point.posts.find_by(survey_type: "pre") %>
         <tr>
           <td><%= point.number %></td>
           <td><%= point.room_name %></td>
@@ -33,7 +33,7 @@
     <div class="page">
       <table class="table table-bordered" style="font-size:10px;">
         <% point = points[num] %>
-        <% pre_post = point.posts.find_by(survey_type: survey_type) %>
+        <% pre_post = point.posts.find_by(survey_type: "pre") %>
         <% if pre_post != nil %>
           <% num = num + 1 %>
           <tr>
@@ -66,7 +66,7 @@
         <% end %>
         <% if num < points.length %>      
           <% point = points[num] %>
-          <% pre_post = point.posts.find_by(survey_type: survey_type) %>
+          <% pre_post = point.posts.find_by(survey_type: "pre") %>
           <% if pre_post != nil %>
             <% num = num + 1 %>
             <tr>
@@ -100,7 +100,7 @@
         <% end %>
         <% if num < points.length %>      
           <% point = points[num] %>
-          <% pre_post = point.posts.find_by(survey_type: survey_type) %>
+          <% pre_post = point.posts.find_by(survey_type: "pre") %>
           <% if pre_post != nil %>
             <% num = num + 1 %>
             <tr>
