--- a/app/views/investigations/show.html.erb
+++ b/app/views/investigations/show.html.erb
@@ -58,7 +58,7 @@
 
 <table class="table table-striped table-hover">
   <tr>
-    <th class="text-center">ID</th>
+    <th class="text-center">家屋番号</th>
     <th class="text-center">家屋名（居住者名）</th>
     <th class="text-center">居住者電話番号</th>
     <th class="text-center">建物所在地</th>
@@ -70,7 +70,7 @@
   
   <% @houses.each do |house| %>
       <tr>
-        <td class="text-center align-middle"><%= house.id %></td>
+        <td class="text-center align-middle"><%= house.house_number %></td>
         <td class="text-center align-middle"><%= house.house_name %></td>
         <td class="text-center align-middle"><%= house.resident_phone_number %></td>
         <td class="text-center align-middle"><%= house.prefectures %><%= house.city %><%= house.block %></td>
