--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -5,6 +5,7 @@
       <%= f.hidden_field :survey_type, :value => @damage.survey_type %>
       <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera' %>
       <%= f.hidden_field :image_url %>
+      <%= f.hidden_field :original_image_url %>
 
       <div class="form-group" style="margin-top: 10px; padding: 10px; background: #eee;">    
         ホワイトボードの配置（縦置き）：
@@ -286,10 +287,14 @@
   });
 
   $('#submit').on('mousedown', function (e) {
-    // 画像化
-    var canvas_data = canvas.toDataURL('image/jpg');
-    
     $("#damage_image1").val(""); //画像データを二重に送信するのを防ぐ
+    // 矢印ありイメージの画像化
+    var canvas_data = canvas.toDataURL('image/jpg');
     $("#damage_image_url").val(canvas_data);
+    
+    // 矢印のないオリジナルイメージを作成
+    ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+    canvas_data = canvas.toDataURL('image/jpg');
+    $("#damage_original_image_url").val(canvas_data);
   });
 </script>
