--- a/app/views/investigations/pdf_pre_survey.html.erb
+++ b/app/views/investigations/pdf_pre_survey.html.erb
@@ -42,6 +42,44 @@ body {
     height: 256mm;
     //outline: 2cm #FFEAEA solid;
 }
+.post-img {
+  width: 100%;
+  position: relative;
+  font-size: 9px;
+}
+.post-img > img {
+  width: 100%;
+}
+.post-img > .wb_left_top {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.post-img > .wb_top {
+  position: absolute;
+  top: 0;
+  left: 40%;
+}
+.post-img > .wb_right_top {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.post-img > .wb_right_down {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.post-img > .wb_down {
+  position: absolute;
+  bottom: 0;
+  left: 40%;
+}
+.post-img > .wb_left_down {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
 @page {
     size: A4;
     margin: 0;
