--- a/app/views/investigations/show.html.erb
+++ b/app/views/investigations/show.html.erb
@@ -45,9 +45,21 @@
   </tr>
   
   <tr>
-    <td class="text-center"><%= link_to '印刷', pdf_pre_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %></td>
-    <td class="text-center"><%= link_to '印刷', pdf_ongoing_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %></td>
-    <td class="text-center"><%= link_to '印刷', pdf_after_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %></td>    
+    <td class="text-center">
+      <%= link_to '報告書印刷', pdf_pre_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %>
+      <%= link_to 'WB写真DL', list_images_pre_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %>
+      <%= link_to '写真DL', list_plainImages_pre_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %> 
+    </td>
+    <td class="text-center">
+      <%= link_to '報告書印刷', pdf_ongoing_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %>
+      <%= link_to 'WB写真DL', list_images_ongoing_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %>
+      <%= link_to '写真DL', list_plainImages_ongoing_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %>      
+    </td>
+    <td class="text-center">
+      <%= link_to '報告書印刷', pdf_after_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %>
+      <%= link_to 'WB写真DL', list_images_after_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %>
+      <%= link_to '写真DL', list_plainImages_after_survey_investigation_path, target: :_blank, :class=>"btn btn-primary" %>
+    </td>    
   </tr>
 </table>
 
